tries fixes for input rounded corners on iOs

--- a/styles/dash.css
+++ b/styles/dash.css
@@ -685,7 +685,8 @@ input#location-search {
     /*transform-origin: left;
     transform: scaleX(0);
     transition: transform .5s;*/
-
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
 
 }
 /*
